examples/test/testpolicy15307.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: policy15307
  namespace: namespace390
spec:
  podSelector:
    matchLabels:
      key3: value40
  policyTypes:
  ingress:
  - from:
    - namespaceSelector:
        matchLabels:
          key23: value27
          key22: value43
          key18: value32
      podSelector:
        matchLabels:
          key33: value14
          key46: value12
          key2: value31
